[project]
name = "llm-tools-docker"
version = "0.1a0"
description = "Run commands in a Docker container via an LLM tool"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.9"
dependencies = [
    "llm>=0.26"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/llm-tools-docker"
Changelog = "https://github.com/simonw/llm-tools-docker/releases"
Issues = "https://github.com/simonw/llm-tools-docker/issues"
CI = "https://github.com/simonw/llm-tools-docker/actions"

[project.entry-points.llm]
llm_tools_docker = "llm_tools_docker"

[project.optional-dependencies]
test = ["pytest", "llm-echo>=0.3a1"]
